# HomeDashboard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-pi.txt  requirements.txt
.github/: dependabot.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml
config/: config.example.yaml  quotes.json  web.example.yaml
credentials/: .gitkeep
deploy/: configure.sh  dashboard.logrotate  dashboard.service  dashboard.timer
docs/: architecture.md  color-theme-previews.md  color-themes.md  configuration.md  development.md  faq.md  improvement-plan.md  previews.md  setup.md  themes.md  upgrading-from-v3.md  upgrading-from-v4.md  web-ui.md
scripts/: build_banner.py  build_split_previews.py  check_docs.py
src/: _io.py  _time.py  app.py  astronomy.py  cli.py  config.py  config_migrations.py  config_schema.py  config_validation.py  data_pipeline.py  dummy_data.py  filters.py  main.py  services_output_service.py  services_run_policy.py  services_theme_service.py
src/data/: models.py
src/display/: backend.py  driver.py  refresh_tracker.py
src/fetchers/: __init__.py  cache.py  calendar.py  calendar_caldav.py  calendar_google.py  calendar_ical.py  circuit_breaker.py  host.py  purpleair.py  quota_tracker.py  registry.py  weather.py
src/render/: artkit.py  canvas.py  fonts.py  icons.py  layout.py  moon.py  moon_render.py  primitives.py  quantize.py  random_theme.py  star_catalog.py  theme.py
src/render/components/: __init__.py  _builtins.py  air_quality_panel.py  almanac_panel.py  astronomy_panel.py  birthday_bar.py  constellation_map_panel.py  countdown_panel.py  diags_panel.py  fuzzyclock_panel.py  halftone_panel.py  header.py  info_panel.py  light_cycle_panel.py  message_panel.py  monthly_panel.py  moonphase_panel.py  naturalist_panel.py  newspaper_panel.py  postcard_panel.py  qotd_panel.py  registry.py  scorecard_panel.py  sunrise_panel.py  tides_panel.py  timeline_panel.py  today_view.py  trends_panel.py  weather_full.py  weather_panel.py  weatherglass_panel.py  week_view.py  year_pulse_panel.py
src/render/themes/: __init__.py  agenda.py  air_quality.py  almanac.py  astronomy.py  constellation_map.py  countdown.py  diags.py  fantasy.py  fuzzyclock.py  fuzzyclock_invert.py  graphite.py  halftone.py  lcars.py  light_cycle.py  message.py  minimalist.py  monthly.py  moonphase.py  moonphase_invert.py  moonphase_photo.py  naturalist.py  newspaper.py  old_fashioned.py  photo.py  postcard.py  qotd.py  qotd_invert.py  registry.py  scorecard.py  sunrise.py  terminal.py  tides.py  timeline.py  today.py  trends.py  weather.py  weatherglass.py  year_pulse.py
src/services/: output.py  run_policy.py  theme.py  theme_rules.py
src/web/: app.py  config_editor.py  event_store.py  state_reader.py
src/web/routes/: actions.py  config.py  image.py  preview.py  status.py
src/web/static/: dashboard.js  style.css
src/web/templates/: base.html  config.html  status.html
tests/: test__time.py  test_air_quality_panel.py  test_almanac_panel.py  test_app.py  test_artkit.py  test_astronomy_module.py  test_astronomy_theme.py  test_birthday_bar.py  test_bugfixes.py  test_cache.py  test_cache_breaker_interaction.py  test_cache_concurrent.py  test_calendar_caldav.py  test_calendar_fetcher.py  test_calendar_google.py  test_canvas_resolution.py  test_circuit_breaker.py  test_config.py  test_config_migrations.py  test_config_schema.py  test_config_validation.py  test_constellation_map_panel.py  test_countdown_theme.py  test_data_pipeline_coverage.py  test_data_pipeline_e2e.py  test_diags_theme.py  test_display_backend.py  test_display_driver.py  test_dst_edge_cases.py  test_fetch_live_data.py  test_fetchers_registry.py  test_filters.py  test_fonts.py  test_fuzzyclock_panel.py  test_fuzzyclock_theme.py  test_halftone_panel.py  test_header.py  test_ical_edge_cases.py  test_icons.py  test_info_panel.py  (+54 more)
tests/snapshots/: theme_pixel_hashes.json
tools/: check_naive_datetime.py
