[project]
name = "dashboard-v4"
version = "4.2.1"
description = "Python eInk dashboard for Raspberry Pi — calendar, weather, birthdays, and daily quotes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "Pillow>=10.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "requests>=2.28",
    "PyYAML>=6.0",
    "icalendar>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
pi = [
    "gpiozero",
    "lgpio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "UP007", # X | Y syntax requires 3.10+ for runtime (we use from __future__ for annotations)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.data.models"
disallow_untyped_defs = true
warn_return_any = true
