[project]
name = "home-dashboard"
version = "5.1.0"
description = "Python eInk dashboard for Raspberry Pi — calendar, weather, birthdays, and daily quotes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "Pillow>=10.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "requests>=2.28",
    "PyYAML>=6.0",
    "icalendar>=5.0",
    "caldav>=1.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "flask>=3.0",
    "waitress>=3.0",
]
pi = [
    "gpiozero",
    "lgpio",
]
web = [
    "flask>=3.0",
    "waitress>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"
filterwarnings = [
    # Fail fast on Pillow API deprecations (e.g. getdata, removed in Pillow 14)
    # instead of letting hundreds of silent warnings accumulate.
    "error:.*deprecated and will be removed in Pillow.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/_version.py",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 94

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "src.data.models"
disallow_untyped_defs = true
warn_return_any = true

